@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6800 2004/08/04 21:38:16 minskim Exp $
+$NetBSD: CHANGES,v 1.6801 2004/08/04 22:56:02 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3730,3 +3730,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added cy2-sql-2.1.19 [jlam 2004-08-04]
 	Updated cdrtools-ossdvd to 2.01a27 [wiz 2004-08-04]
 	Updated xchat to 2.0.10nb1 [minskim 2004-08-04]
+	Updated un-ttf to 20040804 [minskim 2004-08-04]
